UI (fix): while listing supermasters, ip address is not visible when using dark theme.

--- a/templates/default/style/dark.css
+++ b/templates/default/style/dark.css
@@ -638,3 +638,8 @@ input[type=number]::-webkit-outer-spin-button {
     border-color: #087990 !important;
     color: #b6effb !important;
 }
+
+/* List supermasters */
+.supermaster-ip {
+    color: var(--text-light);
+}
